src/style/Game.css
body {
    animation-name: backgroundColorPalette;
    animation-duration: 30s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}
.game-container {
    background-color: darkgrey;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2em;
}
.scene {
    position: relative;
    width: 10em;
}
.tile {
    position: absolute;
    background-color: blueviolet;
    border: 1px black solid;
}
.terminal {
    font-family: monospace;
    background-color: #888;
    overflow: scroll;
    color: #EEE;
    height: 5em;
    width: 20em;
    margin-top: 1em;
}

@keyframes backgroundColorPalette {
    0% {
      background: #4b1e1b;
    }
    25% {
      background: #3d6b52;
    }
    50% {
      background: #69394d;
    }
    75% {
      background: #601680;
    }
    100% {
      background: #5f3931;
    }
  }

